--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 PROSPER202 UNOFFICIAL REPOSITORY
 ---------------------------------
 INITIAL UPLOAD: 1.2.1 / 5/03/2009 
-OFFICIAL SITE http://prosper202.com/apps/
 REPOSITORY http://github.com/lsd/prosper202/tree/master
 ---------------------------------
 
-"Prosper202 provides pay per click affiliate marketers with free leading edge self hosted ppc software!"
+self hosted ppc tracking software
 
